--- a/imject/imject/imgui.ini
+++ b/imject/imject/imgui.ini
@@ -4,17 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][管理框]
-Pos=942,52
+Pos=208,142
 Size=351,281
 Collapsed=0
 
 [Window][目标进程]
-Pos=611,444
-Size=276,178
+Pos=209,447
+Size=352,213
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
+Pos=514,24
 Size=550,680
 Collapsed=0
 
@@ -27,4 +27,31 @@ Collapsed=0
 Pos=60,60
 Size=169,80
 Collapsed=0
+
+[Window][另一个窗口]
+Pos=60,60
+Size=169,80
+Collapsed=0
+
+[Table][0xA43C3885,3]
+RefScale=16
+Column 0  Width=40
+Column 1  Width=40
+Column 2  Width=40
+
+[Table][0x20DF7A63,4]
+RefScale=16
+Column 0  Width=27 Sort=0v
+Column 1  Width=46
+Column 2  Width=37
+Column 3  Weight=1.0000
+
+[Table][0xDA36A7E0,6]
+RefScale=16
+Column 0  Width=27 Sort=0v
+Column 1  Width=46
+Column 2  Width=71
+Column 3  Width=61
+Column 4  Weight=1.0000
+Column 5  Width=-1
 
