--- a/imject/imject/imject.vcxproj
+++ b/imject/imject/imject.vcxproj
@@ -150,6 +150,8 @@
     <ClCompile Include="..\imgui\imgui_draw.cpp" />
     <ClCompile Include="..\imgui\imgui_tables.cpp" />
     <ClCompile Include="..\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="ijshare.cpp" />
+    <ClCompile Include="imgui_window.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -157,6 +159,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ijshare.h" />
+    <ClInclude Include="imgui_window.h" />
     <ClInclude Include="inject.h" />
     <ClInclude Include="man.h" />
   </ItemGroup>
