--- a/imject/ijdll/ijdll.vcxproj.filters
+++ b/imject/ijdll/ijdll.vcxproj.filters
@@ -1,17 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="源文件">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
+    <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="..\imject\ijshare.cpp">
+      <Filter>imject</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="dllmain.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="..\imject\ijshare.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
+    <Filter Include="imject">
+      <UniqueIdentifier>{241bdf05-1d1b-487e-be71-d40972eea1e4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
