--- a/netdemo/cmakelists.txt
+++ b/netdemo/cmakelists.txt
@@ -1,11 +1,11 @@
-cmake_minimum_required(VERSION 3.14)
+ï»¿cmake_minimum_required(VERSION 3.14)
 
 set(CMAKE_CXX_STANDARD 20)
 
 project(netdemo LANGUAGES CXX)
 
 if (MSVC)
-    # ¾²Ì¬ÔËĞĞ¿â MT
+    # é™æ€è¿è¡Œåº“ MT
     option(VS_LINK_STATIC_MT "static link mt." OFF)
 
     if (VS_LINK_STATIC_MT)
