--- a/hijdemo/CMakeLists.txt
+++ b/hijdemo/CMakeLists.txt
@@ -1,4 +1,6 @@
-cmake_minimum_required (VERSION 3.24)
+﻿cmake_minimum_required (VERSION 3.24)
+
+set(HIJ_WINMM_DLL_OUT_DIR "" CACHE PATH "hij winmm output dir.")
 
 project(hijdemo)
 
