--- a/hijdemo/winmm/CMakeLists.txt
+++ b/hijdemo/winmm/CMakeLists.txt
@@ -2,6 +2,8 @@
 
 set_property(TARGET winmm PROPERTY CXX_STANDARD 20)
 
+target_link_libraries(winmm detours)
+
 target_sources(
     winmm
     PRIVATE
