--- a/gdidemo/CMakeLists.txt
+++ b/gdidemo/CMakeLists.txt
@@ -1,5 +1,9 @@
 ﻿cmake_minimum_required(VERSION 3.24)
 
+# 配置梯子
+set(ENV{HTTP_PROXY} "http://127.0.0.1:10809") 
+set(ENV{HTTPS_PROXY} "http://127.0.0.1:10809")
+
 include("cmake/RxCpp.cmake")
 
 FetchRxCpp()
