--- a/gdidemo/CMakeLists.txt
+++ b/gdidemo/CMakeLists.txt
@@ -13,3 +13,5 @@ project(gdidemo)
 add_subdirectory(simpledemo)
 add_subdirectory(composedemo)
 add_subdirectory(cpprxdemo)
+add_subdirectory(rxdemo)
+add_subdirectory(asyncdemo)
