--- a/gdidemo/CMakeLists.txt
+++ b/gdidemo/CMakeLists.txt
@@ -15,3 +15,4 @@ add_subdirectory(composedemo)
 add_subdirectory(cpprxdemo)
 add_subdirectory(rxdemo)
 add_subdirectory(asyncdemo)
+add_subdirectory(gdipdemo)
